# radicallycandid.github.io

./: .editorconfig  .gitignore  CNAME  Makefile  README.md  build.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
pages/: about.md
pages/en/: about.md
pages/pt/: about.md
posts/en/: engineering-and-product-management-responsibilities.md  hello-world.md
posts/pt/: engineering-and-product-management-responsibilities.md  hello-world.md
static/css/: custom.css
static/js/: lang.js  theme.js  toc.js
templates/: base.html  index.html  page.html  post.html
tests/: __init__.py  test_frontmatter.py  test_i18n.py  test_markdown.py  test_template.py  test_tufte.py  test_utils.py
